# EtereCitizen

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  CONFORMANCE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SPEC.md  THREAT-MODEL.md  TODOS.md  docker-compose.yml  eterecitizen_v0_3.md  fly.toml  package.json  pnpm-lock.yaml  vitest.workspace.ts
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  spec_issue.yml
.github/workflows/: ci.yml  python-sdk.yml  release.yml  security.yml
changelog/: 2026-03-07.md  2026-03-08.md
docs/: api-reference.md  architecture.md  cli-reference.md  getting-started.md  mcp-tools.md  nist-submission.md  privacy.md  smart-contracts.md  tutorial.md
docs-site/: .gitignore  README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts  vercel.json
docs-site/docs/: intro.md
docs-site/scripts/: sync-docs.mjs
docs/adr/: 001-use-did-ethr.md  002-jwt-proof-format.md  003-hash-commitment.md  004-off-chain-decay.md  005-single-owner-initial.md  006-in-memory-registry.md  README.md
sdks/python/: README.md  pyproject.toml
sdks/python/eterecitizen/: __init__.py  antifraud.py  challenge.py  constants.py  decay.py  did.py  trust.py
sdks/python/scripts/: run_conformance.py
sdks/python/tests/: test_conformance.py
spec/: README.md
spec/schemas/: challenge-message.schema.json  (+11 more)
standards/: README.md  arxiv-paper-outline.md  did-methods-registry-note.md  dif-membership.md  w3c-cg-charter.md  w3c-cg-submission-guide.md
(+30 files in other folders)
