[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eterecitizen"
version = "0.1.0"
description = "Python reference implementation of the EtereCitizen protocol"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Icaro Holding", email = "dev@icaroholding.com" }
]
keywords = ["ai-agents", "did", "verifiable-credentials", "identity", "trust", "reputation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
"Homepage"       = "https://eterecitizen.io"
"Repository"     = "https://github.com/icaroholding/EtereCitizen"
"Specification"  = "https://github.com/icaroholding/EtereCitizen/blob/main/SPEC.md"
"Conformance"    = "https://github.com/icaroholding/EtereCitizen/tree/main/spec/test-vectors"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["eterecitizen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
